# se-toolkit-hackathon

./: .env.example  API_KEY_SETUP.md  PLAN.md  QUICK_VERIFICATION.md  README.md  TESTING_GUIDE.md  docker-compose.yml
.qwen/: settings.json
backend/: pyproject.toml
backend/app/: config.py  main.py  models.py  schemas.py
backend/app/routes/: excursions.py  statistics.py  users.py
backend/app/services/: ai_service.py
backend/migrations/: 002_add_requires_password.sql
caddy/: Caddyfile
client-web-react/: Dockerfile  package.json
client-web-react/public/: index.html
client-web-react/src/: App.css  App.js
client-web-react/src/components/: Auth.css  Auth.js  ChatInterface.css  ChatInterface.js  StatisticsDashboard.css  StatisticsDashboard.js  TelegramLogin.css  TelegramLogin.js
nanobot/: .dockerignore  pyproject.toml
nanobot/app/: __init__.py  agent.py  config.py  llm_client.py  main.py  mcp_tools.py
telegram-bot/: Dockerfile  pyproject.toml
telegram-bot/app/: __init__.py  config.py  handlers.py  keyboards.py  main.py  services.py
tests/: pyproject.toml  security_audit.py
tests/backend/: test_api.py
tests/nanobot/: test_agent.py
