[project]
name = "tourstats-telegram-bot"
version = "0.1.0"
description = "TourStats Telegram Bot"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4.0",
    "httpx>=0.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
